[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/menu_screen/multiplayer_panel.gd" type="Script" id=1]
[ext_resource path="res://fonts/time_and_space/TimeandSpace-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/shared/numpad/numpad.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 23
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 27
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 23
font_data = ExtResource( 2 )

[node name="MultiplayerPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.91
margin_top = -201.317
margin_right = 148.09
margin_bottom = -166.317
custom_fonts/font = SubResource( 1 )
text = "Join multiplayer game"
align = 1

[node name="SelectPanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -156.0
margin_right = 169.0
margin_bottom = 223.0

[node name="NumberGrid" type="MarginContainer" parent="SelectPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -149.228
margin_top = -178.582
margin_right = 150.772
margin_bottom = 121.418
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Numpad" parent="SelectPanel/NumberGrid" instance=ExtResource( 3 )]
margin_left = 10.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 290.0

[node name="BackButton" type="Button" parent="SelectPanel"]
margin_left = 98.545
margin_top = 318.862
margin_right = 239.545
margin_bottom = 363.862
custom_fonts/font = SubResource( 2 )
text = "Back"

[node name="Status" type="Label" parent="SelectPanel"]
visible = false
margin_left = 7.0
margin_top = 320.0
margin_right = 328.0
margin_bottom = 365.0
custom_fonts/font = SubResource( 3 )
text = "This is the status bar"
align = 1
valign = 1

[node name="InfoPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.5
margin_top = -147.5
margin_right = 192.5
margin_bottom = 147.5

[node name="Margin" type="MarginContainer" parent="InfoPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="Vertical" type="VBoxContainer" parent="InfoPanel/Margin"]
margin_left = 15.0
margin_top = 15.0
margin_right = 370.0
margin_bottom = 280.0

[node name="Header" type="Label" parent="InfoPanel/Margin/Vertical"]
margin_right = 355.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 4 )
text = "Select Room"
align = 1

[node name="Title" type="Label" parent="InfoPanel/Margin/Vertical"]
margin_top = 47.0
margin_right = 355.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 5 )
text = "this is the title of the room"
autowrap = true

[node name="Description" type="Label" parent="InfoPanel/Margin/Vertical"]
margin_top = 84.0
margin_right = 355.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 6 )
text = "the description of the room that is very very very very long"
autowrap = true

[node name="Placeholder" type="Control" parent="InfoPanel/Margin/Vertical"]
margin_top = 135.0
margin_right = 355.0
margin_bottom = 185.0
size_flags_vertical = 3

[node name="Info" type="Label" parent="InfoPanel/Margin/Vertical"]
margin_top = 189.0
margin_right = 355.0
margin_bottom = 222.0
custom_fonts/font = SubResource( 5 )
text = "Created by - ,1/4"

[node name="Buttons" type="HBoxContainer" parent="InfoPanel/Margin/Vertical"]
margin_top = 226.0
margin_right = 355.0
margin_bottom = 265.0

[node name="Cancel" type="Button" parent="InfoPanel/Margin/Vertical/Buttons"]
margin_right = 175.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
text = "Cancel"

[node name="Join" type="Button" parent="InfoPanel/Margin/Vertical/Buttons"]
margin_left = 179.0
margin_right = 355.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
text = "Join"

[node name="InfoStatusPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -188.545
margin_top = 161.0
margin_right = 192.455
margin_bottom = 221.0

[node name="Label" type="Label" parent="InfoStatusPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 7 )
text = "The room is full already"
align = 1
valign = 1

[connection signal="numpad_completed" from="SelectPanel/NumberGrid/Numpad" to="." method="_on_numpad_completed"]
[connection signal="pressed" from="SelectPanel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="InfoPanel/Margin/Vertical/Buttons/Cancel" to="." method="_on_infopanel_cancel_pressed"]
[connection signal="pressed" from="InfoPanel/Margin/Vertical/Buttons/Join" to="." method="_on_infopanel_join_pressed"]
